# ds-hw1

./: CMakeLists.txt  README.md  btree_23.h  build_tree.py  car_dealership_manager.cpp  car_dealership_manager.h  car_node.cpp  car_node.h  grade_node.cpp  grade_node.h  library.cpp  list_node.h  main.cpp  main1.cpp  model_data.h  model_node.h  run_tests.py  sells_node.cpp  sells_node.h  shared_pointer.h  submissions.txt  tests.cpp  tree_node.h  valgrind_log.txt  vector.h  zero_grade_type_node.cpp  zero_grade_type_node.h
isolated/in/: 1.txt  100.txt  47.txt
main_tests/in/: addCarType.txt  getBestSellerModelByType.txt  getWorstModels.txt  makeComplaint.txt  removeCarType.txt  sellCar.txt
rand_tests/tests/rand_tests/cpp_out/: cpp_out1.txt  cpp_out10.txt  cpp_out100.txt  cpp_out14.txt  cpp_out17.txt  cpp_out47.txt
tests/: tree2.json
tests/in/: insert2to3.json  insert3to4first.json  insert3to4second.json  remove2to1borrowMid.json  remove2to1borrowSmall.json  remove2to1unionBig.json  remove3to2.json
tree_tests/: tree1.json  tree3.json
tree_tests/in/: insert3to4twice.json  insert3to4twiceRoot.json  remove2to1borrowBig.json  remove2to1borrowSmall.json  remove2to1unionMid.json  remove2to1unionTwice.json
yan_tests/: out2.txt
